--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,11 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-        <a href="" class="btn">Home.tar.gz</a>
-        <a href="" class="btn">About the Robot.tar.gz</a>
-        <a href="" class="btn">Competition.tar.gz</a>
-        <a href="" class="btn">The Team.tar.gz</a>
-        <a href="" class="btn">Contact.tar.gz</a>
+        <a href="" class="btn">Home</a>
+        <a href="" class="btn">About the Robot</a>
+        <a href="" class="btn">Competition</a>
+        <a href="" class="btn">The Team</a>
+        <a href="" class="btn">Contact</a>
     </section>
 
 
