put title & description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+      <h1 class="project-name">UTD Robosub</h1>
+      <h2 class="project-tagline">This is the UT Dallas's AUV Club page</h2>
 
         <a href="" class="btn">Home</a>
         <a href="" class="btn">About the Robot</a>
