--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@
 
         <a href="/index" class="btn">Home</a>
         <a href="/Robot" class="btn">About the Robot</a>
-        <a href="Competition" class="btn">Competition</a>
-        <a href="team" class="btn">The Team</a>
-        <a href="contact" class="btn">Contact</a>
+        <a href="/Competition" class="btn">Competition</a>
+        <a href="/team" class="btn">The Team</a>
+        <a href="/contact" class="btn">Contact</a>
     </section>
 
 
