--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">UTD Robosub</h1>
       <h2 class="project-tagline">This is the UT Dallas's AUV Club page</h2>
 
-        <a href="/index" class="btn">Home</a>
+        <a href="/index.md" class="btn">Home</a>
         <a href="/Robot" class="btn">About the Robot</a>
         <a href="/Competition" class="btn">Competition</a>
         <a href="/team" class="btn">The Team</a>
