--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,11 +14,11 @@
       <h1 class="project-name">UTD Robosub</h1>
       <h2 class="project-tagline">This is the UT Dallas's AUV Club page</h2>
 
-        <a href="/index.md" class="btn">Home</a>
-        <a href="/Robot" class="btn">About the Robot</a>
-        <a href="/Competition" class="btn">Competition</a>
-        <a href="/team" class="btn">The Team</a>
-        <a href="/contact" class="btn">Contact</a>
+        <a href="/robosub/" class="btn">Home</a>
+        <a href="/robosub/Robot" class="btn">About the Robot</a>
+        <a href="/robosub/Competition" class="btn">Competition</a>
+        <a href="/robosub/team" class="btn">The Team</a>
+        <a href="/robosub/contact" class="btn">Contact</a>
     </section>
 
 
