--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
         <a href="/robosub/" class="btn">Home</a>
         <a href="/robosub/Robot" class="btn">About the Robot</a>
-        <a href="/robosub/Competition" class="btn">Competition</a>
+        <a href="/robosub/competitions" class="btn">Competition</a>
         <a href="/robosub/team" class="btn">The Team</a>
         <a href="/robosub/contact" class="btn">Contact</a>
     </section>
